save function to change themes

--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,47 @@
             ],
             "styles": [
               "src/styles.scss",
+              {
+                "input": "src/assets/themes/arya-blue.scss",
+                "bundleName": "arya-blue",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/arya-green.scss",
+                "bundleName": "arya-green",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/arya-orange.scss",
+                "bundleName": "arya-orange",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/arya-purple.scss",
+                "bundleName": "arya-purple",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/vela-blue.scss",
+                "bundleName": "vela-blue",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/vela-green.scss",
+                "bundleName": "vela-green",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/vela-orange.scss",
+                "bundleName": "vela-orange",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/vela-purple.scss",
+                "bundleName": "vela-purple",
+                "inject": false
+              },
               "node_modules/primeicons/primeicons.css",
-              "node_modules/primeng/resources/themes/vela-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": []
