add all themes by framework

--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,131 @@
                 "inject": false
               },
               {
+                "input": "src/assets/themes/bootstrap4-dark-blue.scss",
+                "bundleName": "bootstrap4-dark-blue",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/bootstrap4-dark-purple.scss",
+                "bundleName": "bootstrap4-dark-purple",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/bootstrap4-light-blue.scss",
+                "bundleName": "bootstrap4-light-blue",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/bootstrap4-light-purple.scss",
+                "bundleName": "bootstrap4-light-purple",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/fluent-light.scss",
+                "bundleName": "fluent-light",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/luna-amber.scss",
+                "bundleName": "luna-amber",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/luna-blue.scss",
+                "bundleName": "luna-blue",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/luna-green.scss",
+                "bundleName": "luna-green",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/luna-pink.scss",
+                "bundleName": "luna-pink",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/mdc-dark-deeppurple.scss",
+                "bundleName": "mdc-dark-deeppurple",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/mdc-dark-indigo.scss",
+                "bundleName": "mdc-dark-indigo",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/mdc-light-deeppurple.scss",
+                "bundleName": "mdc-light-deeppurple",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/mdc-light-indigo.scss",
+                "bundleName": "mdc-light-indigo",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/md-dark-deeppurple.scss",
+                "bundleName": "md-dark-deeppurple",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/md-dark-indigo.scss",
+                "bundleName": "md-dark-indigo",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/md-light-deeppurple.scss",
+                "bundleName": "md-light-deeppurple",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/md-light-indigo.scss",
+                "bundleName": "md-light-indigo",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/nova.scss",
+                "bundleName": "nova",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/nova-accent.scss",
+                "bundleName": "nova-accent",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/nova-alt.scss",
+                "bundleName": "nova-alt",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/rhea.scss",
+                "bundleName": "rhea",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/saga-blue.scss",
+                "bundleName": "saga-blue",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/saga-green.scss",
+                "bundleName": "saga-green",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/saga-orange.scss",
+                "bundleName": "saga-orange",
+                "inject": false
+              },
+              {
+                "input": "src/assets/themes/saga-purple.scss",
+                "bundleName": "saga-purple",
+                "inject": false
+              },
+              {
                 "input": "src/assets/themes/vela-blue.scss",
                 "bundleName": "vela-blue",
                 "inject": false
