--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.1.2",
     "primeicons": "^4.1.0",
     "primeng": "^12.1.1",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
