--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "primeng": "^12.1.1",
     "quill": "^1.3.7",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.7",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
