--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "chart.js": "^3.7.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.2.3",
     "quill": "^1.3.7",
